@@ -1,5 +1,5 @@
 /**********************************************************************
- * $Id: mitab_tabfile.cpp,v 1.71 2008/09/26 14:40:24 aboudreault Exp $
+ * $Id: mitab_tabfile.cpp,v 1.72 2008/11/17 22:06:21 aboudreault Exp $
  *
  * Name:     mitab_tabfile.cpp
  * Project:  MapInfo TAB Read/Write library
@@ -32,6 +32,10 @@
  **********************************************************************
  *
  * $Log: mitab_tabfile.cpp,v $
+ * Revision 1.72  2008/11/17 22:06:21  aboudreault
+ * Added support to use OFTDateTime/OFTDate/OFTTime type when compiled with
+ * OGR and fixed reading/writing support for these types.
+ *
  * Revision 1.71  2008/09/26 14:40:24  aboudreault
  * Fixed bug: MITAB doesn't support writing DateTime type (bug 1948)
  *
@@ -771,7 +775,12 @@ int TABFile::ParseTABFileFields()
                                                                TABFDate,
                                                                0,
                                                                0);
-                    poFieldDefn = new OGRFieldDefn(papszTok[0], OFTString);
+                    poFieldDefn = new OGRFieldDefn(papszTok[0], 
+#ifdef MITAB_USE_OFTDATETIME
+                                                   OFTDate);
+#else
+                                                   OFTString);
+#endif
                     poFieldDefn->SetWidth(10);
                 }
                 else if (numTok >= 2 && EQUAL(papszTok[1], "time"))
@@ -784,7 +793,12 @@ int TABFile::ParseTABFileFields()
                                                                TABFTime,
                                                                0,
                                                                0);
-                    poFieldDefn = new OGRFieldDefn(papszTok[0], OFTString);
+                    poFieldDefn = new OGRFieldDefn(papszTok[0], 
+#ifdef MITAB_USE_OFTDATETIME
+                                                   OFTTime);
+#else
+                                                   OFTString);
+#endif
                     poFieldDefn->SetWidth(8);
                 }
                 else if (numTok >= 2 && EQUAL(papszTok[1], "datetime"))
@@ -797,7 +811,12 @@ int TABFile::ParseTABFileFields()
                                                                TABFDateTime,
                                                                0,
                                                                0);
-                    poFieldDefn = new OGRFieldDefn(papszTok[0], OFTString);
+                    poFieldDefn = new OGRFieldDefn(papszTok[0], 
+#ifdef MITAB_USE_OFTDATETIME
+                                                   OFTDateTime);
+#else
+                                                   OFTString);
+#endif
                     poFieldDefn->SetWidth(19);
                 }
                 else if (numTok >= 2 && EQUAL(papszTok[1], "logical"))
@@ -924,7 +943,7 @@ int TABFile::WriteTABFile()
                                               poFieldDefn->GetWidth(),
                                               poFieldDefn->GetPrecision());
                     break;
-                  case TABFInteger:
+                case TABFInteger:
                     pszFieldType = "Integer";
                     break;
                   case TABFSmallInt:
@@ -1581,6 +1600,12 @@ int TABFile::SetFeatureDefn(OGRFeatureDefn *poFeatureDefn,
               case OFTDateTime:
                 eMapInfoType = TABFDateTime;
                 break;
+              case OFTDate:
+                eMapInfoType = TABFDate;
+                break;
+              case OFTTime:
+                eMapInfoType = TABFTime;
+                break;
               case OFTString:
               default:
                 eMapInfoType = TABFChar;
@@ -1726,7 +1751,12 @@ int TABFile::AddFieldNative(const char *pszName, TABFieldType eMapInfoType,
         /*-------------------------------------------------
          * DATE type (V450, returned as a string: "DD/MM/YYYY")
          *------------------------------------------------*/
-        poFieldDefn = new OGRFieldDefn(pszCleanName, OFTString);
+        poFieldDefn = new OGRFieldDefn(pszCleanName, 
+#ifdef MITAB_USE_OFTDATETIME
+                                                   OFTDate);
+#else
+                                                   OFTString);
+#endif
         poFieldDefn->SetWidth(10);
         m_nVersion = MAX(m_nVersion, 450);
         break;
@@ -1734,7 +1764,12 @@ int TABFile::AddFieldNative(const char *pszName, TABFieldType eMapInfoType,
         /*-------------------------------------------------
          * TIME type (V900, returned as a string: "HH:MM:SS")
          *------------------------------------------------*/
-        poFieldDefn = new OGRFieldDefn(pszCleanName, OFTString);
+        poFieldDefn = new OGRFieldDefn(pszCleanName, 
+#ifdef MITAB_USE_OFTDATETIME
+                                                   OFTTime);
+#else
+                                                   OFTString);
+#endif
         poFieldDefn->SetWidth(8);
         m_nVersion = MAX(m_nVersion, 900);
         break;
@@ -1742,7 +1777,12 @@ int TABFile::AddFieldNative(const char *pszName, TABFieldType eMapInfoType,
         /*-------------------------------------------------
          * DATETIME type (V900, returned as a string: "DD/MM/YYYY HH:MM:SS")
          *------------------------------------------------*/
-        poFieldDefn = new OGRFieldDefn(pszCleanName, OFTString);
+        poFieldDefn = new OGRFieldDefn(pszCleanName, 
+#ifdef MITAB_USE_OFTDATETIME
+                                                   OFTDateTime);
+#else
+                                                   OFTString);
+#endif
         poFieldDefn->SetWidth(19);
         m_nVersion = MAX(m_nVersion, 900);
         break;
